--- a/datadiri.html
+++ b/datadiri.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" socialmedia="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jiha Ramdhan</title>
     <link rel="stylesheet" href="style.css">
 </head>
